# platform_external_tigervnc

./: BUILDING.txt  CMakeLists.txt
.github/workflows/: build.yml
cmake/: StaticBuild.cmake
common/: Android.bp  Android.mk  Android.mk.in  CMakeLists.txt
common/network/: UnixSocket.cxx
common/os/: Mutex.cxx  Thread.cxx
common/rfb/: CMakeLists.txt  ClientParams.h  Logger_android.cxx  Logger_android.h  Region.cxx  Region.h  SDesktop.h  SSecurityPlain.cxx  ServerParams.h  UserMsgBox.h
java/: .gitignore
java/com/tigervnc/rfb/: CConnection.java
java/com/tigervnc/vncviewer/: AdbUtils.java  AudioPlayerExtension.java  CConn.java  ClipboardDialog.java  FileUtils.java  OptionsDialog.java  Parameters.java  ServerDialog.java  UserPreferences.java  Viewport.java  VncViewer.java  tigervnc.icns
unix/vncpasswd/: Android.bp  Android.mk  vncpasswd.cxx
unix/xserver/hw/vnc/: Makefile.am
